tree/etc/ufw/after.rules
#
# rules.input-after
#
# Rules that should be run after the ufw command line added rules. Custom
# rules should be added to one of these chains:
#   ufw-after-input
#   ufw-after-output
#   ufw-after-forward
#

# Don't delete these required lines, otherwise there will be errors
*filter
:ufw-after-input - [0:0]
:ufw-after-output - [0:0]
:ufw-after-forward - [0:0]
# End required lines

# don't log noisy services by default
-A ufw-after-input -p udp --dport 137 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp --dport 138 -j ufw-skip-to-policy-input
-A ufw-after-input -p tcp --dport 139 -j ufw-skip-to-policy-input
-A ufw-after-input -p tcp --dport 445 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp --dport 67 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp --dport 68 -j ufw-skip-to-policy-input

# don't log noisy broadcast
-A ufw-after-input -m addrtype --dst-type BROADCAST -j ufw-skip-to-policy-input


#####################################################
##  nodezero - Disallow apache's outgoing connections
# Create new chain
--new-chain out_apache

# Perf: skip already established connections, use ufw's default output policy for these
-A ufw-after-output -m state --state ESTABLISHED,RELATED -j ufw-skip-to-policy-output

# Put everything sent by the Apache run user www-data into the chain out_apache
-A ufw-after-output -m owner --uid-owner www-data -j out_apache

# How to add an exception:
# Example: webmail: allow new outgoing connections to port 143 (imap) and 25 (smtp) on localhost
# Return them to ufw's output policy queue
# (use RETURN instead of ACCEPT so that further restrictions in the ufw out queue still apply)
#-A out_apache -p tcp --syn -d 127.0.0.1 --dport 143 -j RETURN
#-A out_apache -p tcp --syn -d 127.0.0.1 --dport 25  -j RETURN

# Reject everything else apache sends out
-A out_apache -j REJECT

#####################################################

# don't delete the 'COMMIT' line or these rules won't be processed
COMMIT
